# routes/api.php
@@ -2,34 +2,15 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-<<<<<<< HEAD
 use App\Http\Controllers\Api\DokterController;
 use App\Http\Controllers\Api\JadwalDokterController;
 use App\Http\Controllers\Api\PasienController;
 use App\Http\Controllers\Api\KonsultasiController;
 use App\Http\Controllers\Api\RekamMedisController;
 use App\Http\Controllers\Api\LaporanController;
-use App\Http\Controllers\Api\UserController;    
-=======
-use App\Http\Controllers\DokterController;
-use App\Http\Controllers\JadwalDokterController;
-use App\Http\Controllers\PasienController;
-use App\Http\Controllers\KonsultasiController;
-use App\Http\Controllers\RekamMedisController;
-use App\Http\Controllers\LaporanController;
-use App\Http\Controllers\UserController;
-use App\Http\Controllers\InventoryController;
->>>>>>> 47697dc (add Inventory)
-
-Route::apiResource('user', UserController::class);
-Route::apiResource('dokter', DokterController::class);
-Route::apiResource('jadwal-dokter', JadwalDokterController::class);
-Route::apiResource('pasien', PasienController::class);
-Route::apiResource('konsultasi', KonsultasiController::class);
-Route::apiResource('rekam-medis', RekamMedisController::class);
-Route::apiResource('laporan', LaporanController::class);
-Route::apiResource('inventory', InventoryController::class);
-
+use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\InventoryController;  
+use App\Http\Controllers\Api\PaymentController;    
 
 /*
 |--------------------------------------------------------------------------
@@ -42,6 +23,17 @@ Route::apiResource('inventory', InventoryController::class);
 |
 */
 
+Route::apiResource('user', UserController::class);
+Route::apiResource('dokter', DokterController::class);
+Route::apiResource('jadwal-dokter', JadwalDokterController::class);
+Route::apiResource('pasien', PasienController::class);
+Route::apiResource('konsultasi', KonsultasiController::class);
+Route::apiResource('rekam-medis', RekamMedisController::class);
+Route::apiResource('laporan', LaporanController::class);
+Route::apiResource('inventory', InventoryController::class);
+Route::apiResource('payments', PaymentController::class);  
+
+// Route default untuk user (sanctum auth)
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
